writeup digital synapse impulse response time series

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:30ff6c786e09814784c1a8427d62a6c5f8e0ec4ada007e66b40371f86fd99fa4"
+  "signature": "sha256:c29b6be76338ccede0ea827ef2e20db609e41b07e9a55375aea1235e3f07186f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -91,15 +91,11 @@
       "x := x+ kh\n",
       "$$\n",
       "\n",
-      "At each time step, each level is set to $0$ with probability $p$. At each $\\Delta t$, the $k$ levels each switch with probability $p$ from $h$ to $0$. "
-     ]
-    },
-    {
-     "cell_type": "heading",
-     "level": 2,
-     "metadata": {},
-     "source": [
-      "Deriving synapse parameters"
+      "At each $\\Delta t$, the $k$ levels each switch with probability $p$ from $h$ to $0$. Since $x$ only decays at each $\\Delta t$ timestep, to simplify our notation when considering the decay of $x$, we use $x(t)=x(\\lfloor t/\\Delta t\\rfloor)=x[n]$, where $n=\\lfloor t/\\Delta t\\rfloor$. In other words\n",
+      "\n",
+      "$$\n",
+      "x(t)=x(n\\Delta t)=x[n] \\quad\\text{for}\\quad n\\Delta t \\le t < (n+1)\\Delta t\n",
+      "$$"
      ]
     },
     {
@@ -112,24 +108,40 @@
      ]
     },
     {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Preserving impulse area"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "Let's start by assuming that spikes only arrive at $\\Delta t$ intervals. We'll handle the case when spikes arrive between $\\Delta t$s later.\n",
       "\n",
-      "Given this assumption, each level is modeled by a geometric random variable $X_i$.\n",
+      "The lifetime of the $i$th level, $X_i$, describes the number of $\\Delta t$ intervals that a level is at $h$ and is a geometric random variable.\n",
+      "\n",
+      "\\begin{align}\n",
+      "p_{X_i}(x_i) &= \\text{Pr}(X_i=x_i) \\\\\n",
+      " &= (1-p)^{x_i-1}p,\\quad x_i\\in\\{1,2,\\ldots\\}\n",
+      "\\end{align}\n",
+      "\n",
+      "and expected value\n",
       "\n",
       "$$\n",
-      "X_i \\sim \\text{geom}(p)\n",
+      "E[X_i] = \\frac{1}{p}.\n",
       "$$\n",
       "\n",
-      "$X_i$ describes the number of $\\Delta t$s that a level remains at $h$ before being set to $0$. We know that for a geometric random variable, \n",
-      "\n",
-      "$$\n",
-      "E[X_i] = \\frac{1}{p}\n",
-      "$$\n",
-      "\n",
-      "The area for the impulse response will then be given by\n",
+      "Be careful and note this particular formulation of the geometric random variable. There are other formulation that are shifted versions of this one and have different interpretations. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Using the geometric model of the level lifetime, the area for the impulse response is given by\n",
       "\n",
       "$$\n",
       "\\text{Area} = \\sum_{i=0}^{k}hX_i\\Delta t,\n",
@@ -142,8 +154,88 @@
       "1 &= E\\left[\\sum_{i=0}^{k}hX_i\\Delta t\\right] \\\\\n",
       "  &= h\\Delta t\\sum_{i=0}^{k}E[X_i] \\\\\n",
       "  &= h\\Delta t\\sum_{i=0}^{k}\\frac{1}{p} \\\\\n",
-      "  &= h\\Delta t\\frac{k}{p} \\\\\n",
+      "1 &= h\\Delta t\\frac{k}{p} \\\\\n",
       "p &= h\\Delta t k\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Preserving time course"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We know that the impulse response of the continuous time synapse is \n",
+      "\n",
+      "$$\n",
+      "x(t) = \\frac{1}{\\tau}e^{-t/\\tau}u(t)\n",
+      "$$\n",
+      "\n",
+      "Discretizing this in time yields the update equation\n",
+      "\n",
+      "$$\n",
+      "x[n+1] = x[n]e^{\\Delta t/\\tau}.\n",
+      "$$\n",
+      "\n",
+      "That is, the value of the synapse at each time step is a scaled version of the synapse value at the previous time step. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Let's describe the time course of the stoachastic digital synapse's impulse response using the random process \n",
+      "\n",
+      "$$\n",
+      "X[n],\n",
+      "$$\n",
+      "\n",
+      "where $X[n]\\in \\{0, \\ldots, k\\}$, and the synapse's value at sample $n$ is\n",
+      "\n",
+      "$$\n",
+      "h\\cdot X[n].\n",
+      "$$\n",
+      "\n",
+      "The distribution of $X[n]$ is given by\n",
+      "\n",
+      "\\begin{align}\n",
+      "p_{X[n]}(x) &= \\text{Pr}(X[n]=x)\\\\\n",
+      " &= \\binom{k}{x}(\\text{Pr}(X_i>n))^{x}(\\text{Pr}(X_i\\le n))^{k-x}. \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "In words, for $X[n]$ to take on the value $x$, where $0\\le x\\le k$,\n",
+      " - $x$ of the levels must have lifetimes longer than $n$ intervals\n",
+      " - $k-x$ of of the levels must have lifetimes of at most $n$ intervals\n",
+      " \n",
+      "As a sanity check, consider $X[0]$:\n",
+      " - $\\text{Pr}(X[0]=k)=1$ because $\\binom{k}{k}=1$, $\\text{Pr}(X_i>0)=1$, and although $\\text{Pr}(X_i\\le 0)=0$, $(\\text{Pr}(X_i\\le 0))^0=1$\n",
+      " - $\\text{Pr}(X[0]=x)=0$ for $x\\neq k$ because $(\\text{Pr}(X_i\\le 0))^{k-x}=0$\n",
+      "\n",
+      "Defining $q=\\text{Pr}(X_i>n)$,  \n",
+      "\n",
+      "\\begin{align}\n",
+      "p_{X[n]}(x) &= \\binom{k}{x}(\\text{Pr}(X_i>n))^{x}(\\text{Pr}(X_i\\le n))^{k-x} \\\\\n",
+      " &= \\binom{k}{x}q^x(1-q)^{k-x},\n",
+      "\\end{align}\n",
+      "\n",
+      "which we recognize as a binomial random variable, so $X[n]$ is a binomial process."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To this decay rate in expectation for the stochastic synapse, we desire\n",
+      "\n",
+      "\\begin{align}\n",
+      "E\\left[X[n+1]|X[n]=x\\right] &= xe^{-\\Delta t/\\tau} \\\\\n",
+      "\\sum_{y=0}^{x}y\\binom{x}{y}(1-p)^{y}p^{x-y} &= \n",
       "\\end{align}"
      ]
     }
