finish deriving p and h

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c29b6be76338ccede0ea827ef2e20db609e41b07e9a55375aea1235e3f07186f"
+  "signature": "sha256:c1ea08fc4f3bd378d7dc861e600fcf523ba1153f29fd76d5c5b14e9044ba1988"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,15 +43,19 @@
       "\\dot{x} = -x + u\n",
       "$$\n",
       "\n",
-      "where $x$ is the state of the synapse and $u$ is the spiking input to the synapse. \n",
-      "\n",
-      "Spikes are modeled as delta functions, so  $u=\\sum_i\\delta(t-t_i)$ and\n",
+      "where $x$ is the state of the synapse and $u$ is the spiking input to the synapse. The impulse response of the synapse is \n",
       "\n",
       "$$\n",
-      "x(t) = \\sum_i\\frac{1}{\\tau}e^{-(t-t_i)/\\tau}\\text{u}(t-t_i),\n",
+      "x(t) = \\frac{1}{\\tau}e^{-t/\\tau}\\text{u}(t)\n",
       "$$\n",
       "\n",
-      "where $\\text{u}$ is the unit step function. The mathematical synapse has two properties that we will seek to approximate with the stochastic digital synapse:\n",
+      "where $\\text{u}$ is the unit step function. Spikes are modeled as delta functions, so \n",
+      "\n",
+      "$$\n",
+      "x(t) = \\sum_i\\frac{1}{\\tau}e^{-(t-t_i)/\\tau}\\text{u}(t-t_i).\n",
+      "$$\n",
+      "\n",
+      "The mathematical synapse has two properties that we will seek to approximate with the stochastic digital synapse:\n",
       " - That the area of the impulse response is 1\n",
       "  - As a consequence, given a input spike rate $f$, the synapse has a mean value of $f$.\n",
       " - That the synaptic impulse response decays exponentially with time constant $\\tau$"
@@ -168,29 +172,18 @@
      ]
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 4,
      "metadata": {},
      "source": [
-      "We know that the impulse response of the continuous time synapse is \n",
-      "\n",
-      "$$\n",
-      "x(t) = \\frac{1}{\\tau}e^{-t/\\tau}u(t)\n",
-      "$$\n",
-      "\n",
-      "Discretizing this in time yields the update equation\n",
-      "\n",
-      "$$\n",
-      "x[n+1] = x[n]e^{\\Delta t/\\tau}.\n",
-      "$$\n",
-      "\n",
-      "That is, the value of the synapse at each time step is a scaled version of the synapse value at the previous time step. "
+      "Synapse as random process"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Let's describe the time course of the stoachastic digital synapse's impulse response using the random process \n",
+      "We describe the time course of the stoachastic digital synapse's impulse response using the random process \n",
       "\n",
       "$$\n",
       "X[n],\n",
@@ -224,19 +217,84 @@
       " &= \\binom{k}{x}q^x(1-q)^{k-x},\n",
       "\\end{align}\n",
       "\n",
-      "which we recognize as a binomial random variable, so $X[n]$ is a binomial process."
+      "which is the distribution of a binomial random variable, and\n",
+      "\n",
+      "\\begin{align}\n",
+      "q &= \\text{Pr}(X_i>n) \\\\\n",
+      "  &= 1-\\text{Pr}(X_i\\le n) \\\\\n",
+      "  &= 1-\\left(1-(1-p)^n\\right) \\\\\n",
+      "  &= (1-p)^n.\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 4,
+     "metadata": {},
+     "source": [
+      "Synapse as Markov process"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "To this decay rate in expectation for the stochastic synapse, we desire\n",
+      "As a Binomial process, the synapse is a Markov process, which means that the distribution of the synapse at a subsequent time step only depends on the current value of the synapse.\n",
+      "\n",
+      "$$\n",
+      "\\text{Pr}\\left(X[n+1]=x\\big|X[n], X[n-1], \\ldots\\right) = \\text{Pr}\\left(X[n+1]=x\\big|X[n]\\right),\n",
+      "$$\n",
+      "\n",
+      "where\n",
       "\n",
       "\\begin{align}\n",
-      "E\\left[X[n+1]|X[n]=x\\right] &= xe^{-\\Delta t/\\tau} \\\\\n",
-      "\\sum_{y=0}^{x}y\\binom{x}{y}(1-p)^{y}p^{x-y} &= \n",
+      "p_{X[n+1]|X[n]}(x) &= \\text{Pr}\\left(X[n+1]=x\\big|X[n]=x[n]\\right) \\\\\n",
+      "  &= \\binom{x[n]}{x}(1-p)^xp^{x_n-x}\n",
+      "\\end{align}\n",
+      "\n",
+      "for $x\\in\\{0,\\ldots,x[n]\\}$, so the synapse update is also a binomial distribution. As a binomial distribution,\n",
+      "\n",
+      "$$\n",
+      "E\\left[X[n+1]\\big|X[n]\\right] = x[n](1-p).\n",
+      "$$"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Discretizing the impulse response of the continuous time synapse yields the update equation\n",
+      "\n",
+      "$$\n",
+      "x[n+1] = x[n]e^{\\Delta t/\\tau}.\n",
+      "$$\n",
+      "\n",
+      "\n",
+      "To preserve this decay rate in expectation for the stochastic synapse, we desire\n",
+      "\n",
+      "\\begin{align}\n",
+      "E\\left[X[n+1]\\big|X[n]\\right] &= x[n]e^{-\\Delta t/\\tau} \\\\\n",
+      "x[n](1-p) &= x[n]e^{-\\Delta t/\\tau} \\\\\n",
+      "1-p &= e^{-\\Delta t/\\tau} \\\\\n",
+      "p &= 1-e^{-\\Delta t/\\tau}\n",
       "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "From our analysis of preserving the area,\n",
+      "\n",
+      "$$\n",
+      "p = h\\Delta tk\n",
+      "$$\n",
+      "\n",
+      "so\n",
+      "\n",
+      "$$\n",
+      "h=\\frac{1-e^{-\\Delta t/\\tau}}{k\\Delta t}\n",
+      "$$"
      ]
     }
    ],
