digital synapse mean initiated

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3ccbb12316f544ba1ad02be5911cbd01c58dbe347920590198eff898687b1336"
+  "signature": "sha256:4c78fd12f7a5d451a62612f21b19d8f5c6e4c1dad1c2fcbea8bb18dd580f0546"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -496,12 +496,49 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Stochastic digital synapse mean"
+      "Stochastic digital synapse SNR"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The synapse will be receiving spikes from a Poisson process with rate $\\lambda$."
      ]
     },
     {
      "cell_type": "heading",
-     "level": 1,
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "Stochastic digital synapse mean"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Consider from the perspective of a point in time of the synapse. Each spike that arrives $n_i$ before the current time contributes $X[n_i]$ to the current value of the synapse. For $N$ spikes that arrived prior to the current time, the value of the synapse is\n",
+      "\n",
+      "$$\n",
+      "S = h\\sum_{i=1}^{N}X[n_i].\n",
+      "$$\n",
+      "\n",
+      "The synapse mean will then be given by\n",
+      "\n",
+      "\\begin{align}\n",
+      "E[S] &= E\\left[h\\sum_{i=1}^{N}X[n_i]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}X[n_i]\\right] \\\\\n",
+      " &= hE\\left[E\\left[\\sum_{i=1}^{N}X[n_i]\\bigg|N\\right]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}E\\left[X[n_i]\\bigg|N\\right]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}E\\left[X[n_i]\\right]\\right] \\\\\n",
+      "\\end{align}\n",
+      "\n"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
      "source": [
       "Stochastic digital synapse variance"
@@ -509,7 +546,7 @@
     },
     {
      "cell_type": "heading",
-     "level": 1,
+     "level": 2,
      "metadata": {},
      "source": [
       "Stochastic digital synapse simulation"
