update digital synapse summary

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4c78fd12f7a5d451a62612f21b19d8f5c6e4c1dad1c2fcbea8bb18dd580f0546"
+  "signature": "sha256:106f7befaf0aab497e4fa185abc1485ca52eb0776fb7348ce2d69e78b090a684"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -302,17 +302,27 @@
      "level": 3,
      "metadata": {},
      "source": [
-      "Stochastic digital synapse parameter summary"
+      "Stochastic digital synapse summary"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "The synapse parameters are given by\n",
+      "\n",
       "\\begin{align}\n",
       "p &= 1-e^{-\\Delta t/\\tau} \\\\\n",
       "h &= \\frac{1-e^{-\\Delta t/\\tau}}{k\\Delta t}\n",
-      "\\end{align}"
+      "\\end{align}\n",
+      "\n",
+      "The distribution of the synapse impulse response is a binomial distribution given by \n",
+      "\n",
+      "$$\n",
+      "p_{X[n]}(x) = \\binom{k}{x}q^x(1-q)^{k-x},\n",
+      "$$\n",
+      "\n",
+      "where $q=(1-p)^n$."
      ]
     },
     {
