mean of synapse receiving spikes

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:106f7befaf0aab497e4fa185abc1485ca52eb0776fb7348ce2d69e78b090a684"
+  "signature": "sha256:5263cf2107ebbba37268b9131e509925139f5219b57e6336a277c331ba8aa165"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -186,10 +186,20 @@
       "We describe the time course of the stoachastic digital synapse's impulse response using the random process \n",
       "\n",
       "$$\n",
-      "X[n],\n",
+      "X[n]=\\sum_{i=1}^{k}\\mathbf{1}(X_i>n),\n",
       "$$\n",
       "\n",
-      "where $X[n]\\in \\{0, \\ldots, k\\}$, and the synapse's value at sample $n$ is\n",
+      "where $\\mathbf{1}$ is the indicator function\n",
+      "\n",
+      "$$\n",
+      "\\mathbf{1}(X_i>n) =\n",
+      "\\begin{cases}\n",
+      "1 &\\text{ if } X_n>n \\\\\n",
+      "0 &\\text{ if } X_n\\le n\n",
+      "\\end{cases}\n",
+      "$$\n",
+      "\n",
+      "and the synapse's value at sample $n$ is\n",
       "\n",
       "$$\n",
       "h\\cdot X[n].\n",
@@ -528,7 +538,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Consider from the perspective of a point in time of the synapse. Each spike that arrives $n_i$ before the current time contributes $X[n_i]$ to the current value of the synapse. For $N$ spikes that arrived prior to the current time, the value of the synapse is\n",
+      "Consider from the perspective of a point in time of the synapse. Each spike that arrives $n_i$ before the current time contributes $X[n_i]$ to the current value of the synapse independent of any other spike. For $N$ spikes that arrived prior to the current time, the value of the synapse is\n",
       "\n",
       "$$\n",
       "S = h\\sum_{i=1}^{N}X[n_i].\n",
@@ -542,8 +552,86 @@
       " &= hE\\left[E\\left[\\sum_{i=1}^{N}X[n_i]\\bigg|N\\right]\\right] \\\\\n",
       " &= hE\\left[\\sum_{i=1}^{N}E\\left[X[n_i]\\bigg|N\\right]\\right] \\\\\n",
       " &= hE\\left[\\sum_{i=1}^{N}E\\left[X[n_i]\\right]\\right] \\\\\n",
+      " &= hE\\left[\\sum_{i=1}^{N}1\\right]E\\left[X[n_i]\\right] \\\\\n",
+      " &= hE[N]\\ E[X[n_i]] \\\\\n",
+      " &= hE[N]\\ E\\left[E\\left[X[n_i]\\bigg|n_i\\right]\\right] \\\\\n",
+      " &= hE[N]\\ E\\left[k(1-p)^{n_i}\\right] \\\\\n",
+      " &= hkE[N]\\ E\\left[(1-p)^{n_i}\\right] \\\\\n",
       "\\end{align}\n",
       "\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Since the impulse response approximates a decaying exponential, it can take a very long time to reach $0$. To avoid considering all spikes since the beginning of time, we make the assumption that the impulse response is negligible after a certain time. That is, we only consider spikes within $m$ steps of the current time, where $m$ is an arbitrary, positive integer. The higher $m$ is, the further back in time we consider. As $N$ is the number of spikes from a Poisson spike train with rate $\\lambda$ received within $m\\Delta t$, $E[N]=\\lambda m\\Delta t$, so\n",
+      "\n",
+      "\\begin{align}\n",
+      "E[S] &= hkE[N]E\\left[(1-p)^{n_i}\\right] \\\\\n",
+      " &= hk\\lambda m\\Delta tE\\left[(1-p)^{n_i}\\right]\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The spike times within a time period are uniform for a Poisson spike train. With our discretization of time, $n_i$ is uniformly distributed in $[1, m]$, so\n",
+      "\n",
+      "\\begin{align}\n",
+      "E\\left[(1-p)^{n_i}\\right] &= \\sum_{n_i=1}^{m}\\frac{1}{m}(1-p)^{n_i} \\\\\n",
+      " &= \\frac{1}{m}\\sum_{n_i=1}^{m}(1-p)^{n_i} \\\\\n",
+      " &= \\frac{1}{m}\\frac{(1-p)-(1-p)^{m+1}}{1-(1-p)} \\\\\n",
+      " &= \\frac{1}{m}\\frac{(1-p)-(1-p)^{m+1}}{p} \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "and \n",
+      "\n",
+      "\\begin{align}\n",
+      "E[S] &= hk\\lambda m\\Delta tE\\left[(1-p)^{n_i}\\right]\\\\\n",
+      " &= hk\\lambda m\\Delta t\\frac{1}{m}\\frac{(1-p)-(1-p)^{m+1}}{p}\\\\\n",
+      " &= hk\\lambda \\Delta t\\frac{(1-p)-(1-p)^{m+1}}{p}.\\\\\n",
+      "\\end{align}"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Substituting for $h$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "E[S] &= \\frac{1-e^{-\\Delta t/\\tau}}{k\\Delta t}k\\lambda\\Delta t\\frac{(1-p)-(1-p)^{m+1}}{p} \\\\\n",
+      " &= \\left(1-e^{-\\Delta t/\\tau}\\right)\\lambda\\frac{(1-p)-(1-p)^{m+1}}{p}, \\\\\n",
+      "\\end{align}\n",
+      "\n",
+      "and substituting for $p$,\n",
+      "\n",
+      "\\begin{align}\n",
+      "E[S] &= \\left(1-e^{-\\Delta t/\\tau}\\right)\\lambda\n",
+      "    \\frac{(1-p)-(1-p)^{m+1}}\n",
+      "         {\\left(1-e^{-\\Delta t/\\tau}\\right)}, \\\\\n",
+      " &= \\lambda\\left((1-p)-(1-p)^{m+1}\\right) \\\\\n",
+      " &= \\lambda\\left(\\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)-\n",
+      "                 \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right) \\\\ \n",
+      " &= \\lambda\\left(e^{-\\Delta t/\\tau}-\n",
+      "                 \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right). \\\\ \n",
+      "\\end{align}\n",
+      "\n",
+      "Taking the limits yields\n",
+      "\n",
+      "\\begin{align}\n",
+      "\\lim_{\\Delta t\\rightarrow 0}\\lim_{m\\rightarrow \\infty}E[S] &= \n",
+      "    \\lim_{\\Delta t\\rightarrow 0}\\lim_{m\\rightarrow \\infty}\\lambda\n",
+      "    \\left(e^{-\\Delta t/\\tau}-\n",
+      "          \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right) \\\\\n",
+      " &= \\lim_{\\Delta t\\rightarrow 0}\\lambda\n",
+      "    \\left(e^{-\\Delta t/\\tau}-0\\right) \\\\\n",
+      " &= \\lambda\n",
+      "\\end{align}\n",
+      "\n",
+      "There's shady math in picking $\\lim_{m\\rightarrow \\infty}$ before $\\lim{\\Delta t\\rightarrow 0}$). Reversing the order of the limits yields $0$ instead of $\\lambda$. I talked to Ashok about this and it looks like we would need to prove something about the convergence in order to justify the math. I also need to double check my math because with non-zero $\\Delta t$, I would expect the area to be $\\lambda$, not $\\lambda e^{\\Delta t/\\tau}$, because we picked $h$ to preserve the area on of an impulse response on expectation..."
      ]
     },
     {
@@ -566,8 +654,18 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# generate data\n",
-      "\n"
+      "# generate data"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# "
      ],
      "language": "python",
      "metadata": {},
