--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5263cf2107ebbba37268b9131e509925139f5219b57e6336a277c331ba8aa165"
+  "signature": "sha256:3b8d7f4eafdfa02addeef064c5c7500d9b08fa9ea8e4d6c8b9573c698070c84a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -577,7 +577,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The spike times within a time period are uniform for a Poisson spike train. With our discretization of time, $n_i$ is uniformly distributed in $[1, m]$, so\n",
+      "The spike times within a time period are uniform for a Poisson spike train. With our discretization of time, $n_i$ is uniformly distributed on $[1, m]$, so\n",
       "\n",
       "\\begin{align}\n",
       "E\\left[(1-p)^{n_i}\\right] &= \\sum_{n_i=1}^{m}\\frac{1}{m}(1-p)^{n_i} \\\\\n",
@@ -616,7 +616,9 @@
       " &= \\lambda\\left(\\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)-\n",
       "                 \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right) \\\\ \n",
       " &= \\lambda\\left(e^{-\\Delta t/\\tau}-\n",
-      "                 \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right). \\\\ \n",
+      "                 \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right) \\\\\n",
+      " &= \\lambda\\left(e^{-\\Delta t/\\tau}-\\left(e^{-\\Delta t/\\tau}\\right)^{m+1}\\right) \\\\\n",
+      " &= \\lambda\\left(e^{-\\Delta t/\\tau}-e^{-(m+1)\\Delta t/\\tau}\\right)\n",
       "\\end{align}\n",
       "\n",
       "Taking the limits yields\n",
@@ -624,14 +626,13 @@
       "\\begin{align}\n",
       "\\lim_{\\Delta t\\rightarrow 0}\\lim_{m\\rightarrow \\infty}E[S] &= \n",
       "    \\lim_{\\Delta t\\rightarrow 0}\\lim_{m\\rightarrow \\infty}\\lambda\n",
-      "    \\left(e^{-\\Delta t/\\tau}-\n",
-      "          \\left(1-\\left(1-e^{-\\Delta t/\\tau}\\right)\\right)^{m+1}\\right) \\\\\n",
+      "    \\left(e^{-\\Delta t/\\tau}-e^{-(m+1)\\Delta t/\\tau}\\right) \\\\\n",
       " &= \\lim_{\\Delta t\\rightarrow 0}\\lambda\n",
       "    \\left(e^{-\\Delta t/\\tau}-0\\right) \\\\\n",
       " &= \\lambda\n",
       "\\end{align}\n",
       "\n",
-      "There's shady math in picking $\\lim_{m\\rightarrow \\infty}$ before $\\lim{\\Delta t\\rightarrow 0}$). Reversing the order of the limits yields $0$ instead of $\\lambda$. I talked to Ashok about this and it looks like we would need to prove something about the convergence in order to justify the math. I also need to double check my math because with non-zero $\\Delta t$, I would expect the area to be $\\lambda$, not $\\lambda e^{\\Delta t/\\tau}$, because we picked $h$ to preserve the area on of an impulse response on expectation..."
+      "I'm not sure about the math in picking $\\lim_{m\\rightarrow \\infty}$ before $\\lim{\\Delta t\\rightarrow 0}$. Reversing the order of the limits yields $0$ instead of $\\lambda$. I talked to Ashok about this and it looks like we would need to prove something about the convergence in order to justify the math. I also need to double check my math because with non-zero $\\Delta t$, I would expect the area to be $\\lambda$, not $\\lambda e^{\\Delta t/\\tau}$, because we picked $h$ to preserve the area on of an impulse response on expectation...perhaps something is wrong in picking which time period I am considering spikes."
      ]
     },
     {
