partial revisions. still need to complete

--- a/synapse/DigitalSynapse_SNR.ipynb
+++ b/synapse/DigitalSynapse_SNR.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3b8d7f4eafdfa02addeef064c5c7500d9b08fa9ea8e4d6c8b9573c698070c84a"
+  "signature": "sha256:3186ff83fa1c846a28a6e6fb711864b405db571e84f44126d1136cad10c8a0ab"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -40,7 +40,7 @@
       "The goal of the stochastic digital synapse is to approximate the synaptic differential equation\n",
       "\n",
       "$$\n",
-      "\\dot{x} = -x + u\n",
+      "\\tau\\dot{x} = -x + u\n",
       "$$\n",
       "\n",
       "where $x$ is the state of the synapse and $u$ is the spiking input to the synapse. The impulse response of the synapse is \n",
@@ -73,29 +73,36 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The stochastic digital synapse has the following parameters:\n",
-      " - $x$ - the state of the synapse\n",
-      " - $\\Delta t$ - the timestep of the circuit\n",
-      " - $h$ - the height of a level\n",
-      " - $k$ - the number of levels\n",
-      " - $p$ - the probability of a level going from $h$ to $0$\n",
-      " \n",
-      "The user sets $\\Delta t$ and $k$. It is our job to determine $p$ and $h$."
+      "The stochastic digital synapse mimics the probabilistic nature of ion channels in the neuron membrane. An ion channel has 2 states: opened and closed. When open, the ion channel allows ions, and hence a current, to flow through the membrane. Although each channel has only two states, the cumulative effect of many channels in the syanpse is to make the state of the synapse effectively continuous.\n",
+      "\n",
+      "The stochastic digital synapse has channels which open when receiving a spike, and close at each time step with some probability. The value of the digital synapse is the sum of the number of open channels scaled to match the dynamics of the canonical synapse.  "
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The stochastic digital synapse mimics the probabilistic nature of ion channels in the neuron membrane. An ion channel has 2 states: opened and closed. When open, the ion channel allows ions, and hence a current, to flow through the membrane. Although each channel has only two states, the cumulative effect of many channels in the syanpse is to make the state of the synapse effectively continuous.\n",
-      "\n",
-      "Each time the synapse receives a spike, its value is incremented by $k$ levels, each of which is $h$ high. That is, when a spike arrives at the synapse,\n",
+      "The stochastic digital synapse has the following parameters:\n",
+      " - $\\Delta t$ - the timestep of the synapse\n",
+      " - $d$ - the state of the digital synapse, in units of $h$\n",
+      " - $h$ - the scale of the digital synapse\n",
+      " - $k$ - the number of open channels\n",
+      " - $p$ - the probability of a channel closing\n",
+      " \n",
+      "The user sets $\\Delta t$ and $k$. It is our job to determine $p$ and $h$ so that $h\\cdot d[n]$ approximates the continuous synapse equation described by $x(t)$."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Each time the synapse receives a spike, $k$ channels open, so\n",
       "\n",
       "$$\n",
-      "x := x+ kh\n",
+      "d := d + k\n",
       "$$\n",
       "\n",
-      "At each $\\Delta t$, the $k$ levels each switch with probability $p$ from $h$ to $0$. Since $x$ only decays at each $\\Delta t$ timestep, to simplify our notation when considering the decay of $x$, we use $x(t)=x(\\lfloor t/\\Delta t\\rfloor)=x[n]$, where $n=\\lfloor t/\\Delta t\\rfloor$. In other words\n",
+      "At each $\\Delta t$, the $k$ channels each switch with probability $p$ from $1$ to $0$. Since $x$ only decays at each $\\Delta t$ timestep, to simplify our notation when considering the decay of $x$, we use $x(t)=x(\\lfloor t/\\Delta t\\rfloor)=x[n]$, where $n=\\lfloor t/\\Delta t\\rfloor$. In other words\n",
       "\n",
       "$$\n",
       "x(t)=x(n\\Delta t)=x[n] \\quad\\text{for}\\quad n\\Delta t \\le t < (n+1)\\Delta t\n",
@@ -148,16 +155,16 @@
       "Using the geometric model of the level lifetime, the area for the impulse response is given by\n",
       "\n",
       "$$\n",
-      "\\text{Area} = \\sum_{i=0}^{k}hX_i\\Delta t,\n",
+      "\\text{Area} = \\sum_{i=1}^{k}hX_i\\Delta t,\n",
       "$$\n",
       "\n",
       "so\n",
       "\n",
       "\\begin{align}\n",
-      "E[\\text{Area}] &= E\\left[\\sum_{i=0}^{k}hX_i\\Delta t\\right] \\\\\n",
-      "1 &= E\\left[\\sum_{i=0}^{k}hX_i\\Delta t\\right] \\\\\n",
-      "  &= h\\Delta t\\sum_{i=0}^{k}E[X_i] \\\\\n",
-      "  &= h\\Delta t\\sum_{i=0}^{k}\\frac{1}{p} \\\\\n",
+      "E[\\text{Area}] &= E\\left[\\sum_{i=1}^{k}hX_i\\Delta t\\right] \\\\\n",
+      "1 &= E\\left[\\sum_{i=1}^{k}hX_i\\Delta t\\right] \\\\\n",
+      "  &= h\\Delta t\\sum_{i=1}^{k}E[X_i] \\\\\n",
+      "  &= h\\Delta t\\sum_{i=1}^{k}\\frac{1}{p} \\\\\n",
       "1 &= h\\Delta t\\frac{k}{p} \\\\\n",
       "p &= h\\Delta t k\n",
       "\\end{align}"
